--- a/style.css
+++ b/style.css
@@ -1,24 +1,21 @@
 body {
-  /* background-image: url("https://d1aueex22ha5si.cloudfront.net/Conference/1500/BackGround/3D-Brain-Rotation-1643705324864.gif");
-  background-repeat: no-repeat;
+  background-image: url("https://www.pixelstalk.net/wp-content/uploads/images5/Cloud-Aesthetic-Backgrounds-Desktop.jpg");
   background-size: cover;
-  color: white; */
+  color: white;
 }
 h1 {
   text-align: center;
+  font-size: 52px;
 }
 .word {
   text-align: center;
 }
 .unknown {
-  font-size: 34px;
+  font-size: 44px;
 }
 
-.hanger {
-  /* border: 1px solid black; */
-}
 .attempts {
-  font-size: 18px;
+  font-size: 24px;
 }
 main {
   justify-content: center;
@@ -33,6 +30,7 @@ main {
 
 .container {
   margin-top: 50px;
+  font-size: 22px;
 }
 
 .row {
@@ -43,7 +41,7 @@ main {
 .letter {
   display: inline-block;
   padding: 5px 10px;
-  border: 1px solid #000;
+  border: 1px solid white;
   text-transform: uppercase;
 }
 .letter:hover {
@@ -61,6 +59,7 @@ button {
   justify-content: center;
   align-items: center;
   align-content: center;
+  cursor: pointer;
 }
 
 img {
@@ -76,7 +75,30 @@ img {
 .hidden {
   display: none;
 }
+.group {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 120px;
+}
 
 .scores {
-justify-content: right;
+  display: flex;
+  justify-content: right;
+  font-size: 24px;
+}
+.wins {
+  display: flex;
+  justify-content: right;
+  padding-right: 60px;
+}
+.losses {
+  display: flex;
+  justify-content: right;
+  padding-right: 120px;
+}
+.dubs, .wrong {
+  padding-left: .3em;
+}
+span {
+  font-weight: bold;
 }
