--- a/style.css
+++ b/style.css
@@ -104,3 +104,24 @@ img {
 span {
   font-weight: bold;
 }
+
+@media only screen and (max-width: 600px) {
+
+  .letter {
+    padding: 4px 8px;
+  }
+
+  .group {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  .attempts {
+    padding-right: 20px;
+  }
+
+  .attempts, .wins, .losses {
+    font-size: 20px;
+  }
+
+}
